--- a/style.css
+++ b/style.css
@@ -57,11 +57,13 @@ body {
     background: none;
     font-size: clamp(2rem, 8vw, 3rem);
     position: relative;
+    display: inline-block;
+    font-weight: bold;
 }
 
 .cell:hover {
     cursor: pointer;
-    border: 2px solid #1e293b;
+    border: 3px solid #1e293b;
     background: #f8fafc;
 }
 
@@ -92,6 +94,12 @@ body {
     color: var(--player2-color);
 }
 
+.winning-cell {
+    display: inline-block;
+    font-weight: bold;
+    border: 3px solid #334155;
+}
+
 
 
 .reset-game {
@@ -109,4 +117,13 @@ body {
 .reset-game:hover {
     cursor: pointer;
     background-color: #1e40af;
+}
+
+
+.winning-cell::before {
+    content: "";
+    width: 10px;
+    height: 50px;
+    background-color: rgb(155, 0, 0);
+
 }
