--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
     position: relative;
     display: inline-block;
     font-weight: bold;
+
 }
 
 .cell:hover {
@@ -89,6 +90,29 @@ body {
     opacity: 0.2;
 
 }
+
+
+/* Animation for when a mark is placed */
+@keyframes scaleUp {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    50% {
+        transform: scale(1.2);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.animation {
+    animation: scaleUp 0.3s ease-out forwards;
+}
+
+
 
 .player1 {
     color: var(--player1-color);
@@ -345,4 +369,31 @@ input:checked + .slider:before {
     border-radius: 50%;
     background: white;
 }
-  
+
+
+
+footer {
+    width: 100%;
+    height: 40px;
+    background-color: #334155;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content {
+    display: flex;
+    color: white;
+    gap: 8px;
+    font-weight: bold;
+    font-size: 0.9rem;
+    align-items: center;
+}
+
+
+.footer-content a {
+    text-decoration:none;
+    color: white;
+}
