--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 .container {
     background-color: var(--container-color);
-    width: clamp(350px, 85vw, 450px);
+    width: clamp(320px, 85vw, 450px);
     max-height: 700px;
     padding: 30px 40px;
     border-radius: 8px;
@@ -33,6 +33,7 @@ body {
 
 .container > h1 {
     margin-bottom: 20px;
+    font-size: clamp(1.9rem, 7vw, 2.2rem);
 }
 
 .player-turn {
@@ -90,29 +91,6 @@ body {
     opacity: 0.2;
 
 }
-
-
-/* Animation for when a mark is placed */
-@keyframes scaleUp {
-    0% {
-        transform: scale(0);
-        opacity: 0;
-    }
-    50% {
-        transform: scale(1.2);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 1;
-    }
-}
-
-.animation {
-    animation: scaleUp 0.3s ease-out forwards;
-}
-
-
 
 .player1 {
     color: var(--player1-color);
@@ -371,18 +349,6 @@ input:checked + .slider:before {
 }
 
 
-
-footer {
-    width: 100%;
-    height: 40px;
-    background-color: #334155;
-    position: fixed;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .footer-content {
     display: flex;
     color: white;
@@ -396,4 +362,16 @@ footer {
 .footer-content a {
     text-decoration:none;
     color: white;
+}
+
+
+footer {
+    width: 100%;
+    height: 40px;
+    background-color: #334155;
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
